...
                app:layout_constraintEnd_toStartOf="@+id/guideline23"
                app:layout_constraintStart_toStartOf="@+id/guideline22"
                app:layout_constraintTop_toBottomOf="@+id/cake_sprite_image_view" />
        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/main_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingTop="376dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
...
